@@ -87,6 +87,24 @@ install -d $RPM_BUILD_ROOT%{_mandir}/man1
 install -d $RPM_BUILD_ROOT%{_mandir}/man4
 make prefix=$RPM_BUILD_ROOT%{prefix} mandir=$RPM_BUILD_ROOT%{_mandir} install
 
+#
+# this is a bit ugly but tries to generate the bindings for all versions
+# of python installed
+for i in %{prefix}/include/python*
+do
+    py_version=`echo $i | sed "s+%{prefix}/include/python++"`
+    if test -x %{prefix}/bin/python$py_version
+    then
+        echo generating bindings for Python $py_version
+	(cd python ; make clean ; \
+         make PYTHON="%{prefix}/bin/python$py_version" \
+	      PYTHON_VERSION="$py_version"; \
+         make PYTHON="%{prefix}/bin/python$py_version" \
+	      PYTHON_VERSION="$py_version" \
+	      prefix=$RPM_BUILD_ROOT%{prefix} \
+	      mandir=$RPM_BUILD_ROOT%{_mandir} install)
+    fi
+done
 %clean
 rm -rf $RPM_BUILD_ROOT
 
